# whylosemoney

./: .gitignore  README.md  pyproject.toml
.streamlit/: config.toml
src/whylosemoney/: __init__.py  analyzer.py  categories.py  cli.py  config.py  db.py  exceptions.py  importer.py  models.py  storage.py  tui.py
src/whylosemoney/analysis/: events.py  mistakes.py  pnl.py
src/whylosemoney/app/: main.py
src/whylosemoney/app/components/: __init__.py  charts.py  filters.py
src/whylosemoney/app/pages/: overview.py  pnl.py  positions.py  settings.py  timeline.py  trades.py
src/whylosemoney/chat/: gemini.py
src/whylosemoney/ibkr/: __init__.py  csv_parser.py  flex_parser.py  live.py
src/whylosemoney/market/: news.py  prices.py
tests/: __init__.py  test_analyzer.py  test_categories.py  test_charts.py  test_cli.py  test_config.py  test_csv_parser.py  test_db.py  test_flex_parser.py  test_gemini_parser.py  test_importer.py  test_live.py  test_mistakes.py  test_models.py  test_pnl.py  test_storage.py  test_tui.py
tests/fixtures/: sample_flex.xml
