[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "whylosemoney"
version = "0.1.0"
description = "CLI-based personal expense tracker and analyzer."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "click>=8.1",
    "pydantic>=2,<3",
    "tabulate>=0.9",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
whylosemoney = "whylosemoney.cli:cli"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
