[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "whylosemoney"
version = "1.0.0"
description = "IBKR portfolio analysis tool — find out why you lose money."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "streamlit>=1.28,<1.51",
    "pandas>=2.0,<2.1",
    "numpy>=1.24,<2.1",
    "ibflex>=0.14",
    "yfinance>=0.2.31",
    "finnhub-python>=2.4",
    "plotly>=5.18",
    "mplfinance>=0.12",
    "sqlalchemy>=2.0",
    "pydantic>=2,<3",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]
live = ["ib-insync>=0.9"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
